--- a/Pycon18_debuggingPyspark_holdenkarau.ipynb
+++ b/Pycon18_debuggingPyspark_holdenkarau.ipynb
@@ -97,7 +97,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "UPGRADE TO SPARK 2.2+, PASS USEFUL INFORMATION INTO JUPYTER ERRORS"
+    "UPGRADE TO SPARK 2.3, PASS USEFUL INFORMATION INTO JUPYTER ERRORS"
    ]
   },
   {
@@ -171,14 +171,8 @@
    "source": [
     "jvm out of memory: look at her slide, has some tuning params"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Buy High Performance Spark on amazon"
-   ]
   }
+  
  ],
  "metadata": {
   "kernelspec": {
